--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -12,16 +12,16 @@ body, html {
     height: 100vh;
 }
 
-.sidebar .logo h2 {
+.sidebar h2 {
     margin: 0;
     font-weight: 800;
     font-size: 22px;
-    color: #80cdd9; /* Puedes mantener este color si te gusta */
+    color: #000; /* Puedes mantener este color si te gusta */
     margin-bottom: 30px;
 }
 
 .sidebar {
-    background-color: #2e2e2e; /* Color de fondo más oscuro */
+    background-color: #fff; /* Color de fondo más oscuro */
     width: 200px;
     padding: 20px 0;
     display: flex;
@@ -29,8 +29,8 @@ body, html {
     align-items: center;
 }
 
-.sidebar .logo span {
-    color: #f0f0f0; /* Texto claro */
+.sidebar .logo {
+    color: gray; /* Texto claro */
     font-weight: 600;
 }
 
@@ -55,15 +55,6 @@ body, html {
     transition: background-color 0.3s ease;
 }
 
-.menu li.active::after {
-    content: '';
-    position: absolute;
-    right: -15px;
-    width: 2px;
-    height: 150%;
-    background-color: #80cdd9;
-}
-
 .icon {
     width: 38px;
     height: 38px;
@@ -71,10 +62,33 @@ body, html {
     transition: transform 0.3s ease;
 }
 
-.menu li:hover .icon {
-    transform: scale(1.1);
-    fill: #00b3ff;
+.menu li::after {
+    content: '';
+    position: absolute;
+    right: -15px;
+    width: 2px;
+    height: 100%;
+    background-color: gray;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.3s ease;
 }
+
+.menu li.active::after {
+    transform: scaleY(1);
+    background-color: gray; /* Color específico para el activo */
+}
+
+.menu li:hover::after {
+    transform: scaleY(1);
+    background-color: gray; /* Color de hover */
+}
+
+.menu li.active:not(:hover)::after {
+    transform: scaleY(1); /* La barra permanece visible solo cuando no está en hover */
+    background-color: gray;
+}
+
 
 .sidebar .menu li span {
     font-size: 16px;
@@ -188,6 +202,7 @@ header .tabs span.active-tab::after {
     font-weight: 600;
     color: #fff;
     text-transform: capitalize;
+    text-decoration: underline;
 }
 
 .project-card h3:hover {
@@ -204,7 +219,7 @@ header .tabs span.active-tab::after {
     font-size: 14px;
     color: #ccc;
     margin-top: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 20px;    
 }
 
 .project-card .stats {
@@ -400,6 +415,20 @@ input::placeholder, textarea::placeholder {
 .delete-btn:hover {
     color: #ff1c1c;
 }
+
+.no-projects-message {
+    display: none; /* Oculto por defecto */
+    text-align: center;
+    color: #777;
+    font-size: 20px;
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+
 
 
 @media (max-width: 900px) {
