--- a/templates/login.html
+++ b/templates/login.html
@@ -155,7 +155,7 @@
             {% endif %}
             <form method="POST" action="/login">
                 <input type="email" name="email" placeholder="E-mail" required>
-                <button type="submit">Avançar</button>
+                <button type="submit">Avasnçar</button>
                 <p class="helper-text">Não tem uma conta? <a href="{{ registro_url }}">Registre-se aqui</a></p>
             </form>            
         </div>
