--- a/templates/login.html
+++ b/templates/login.html
@@ -142,7 +142,8 @@
     <div class="container">
         <div class="left-section">
             <h1>Plataforma Tours 360°</h1>
-            <p>Comece a criar seus próprios tours 360° personalizados. Faça login e descubra o que a House Way pode fazer por você.</p>
+            <p>Comece a criar seus próprios tours 360° personalizados.</p>
+            <p> Faça login e descubra o que a House Way pode fazer por você.</p>
         </div>
         
         <div class="right-section">
