--- a/templates/login.html
+++ b/templates/login.html
@@ -157,7 +157,7 @@
             <form method="POST" action="/login">
                 <input type="email" name="email" placeholder="E-mail" required>
                 <button type="submit">Avasnçar</button>
-                <p class="helper-text">Não tem uma conta? <a href="{{ registro_url }}">Registre-se aqui</a></p>
+                <p class="helper-text">Não tem uma conta? <a href="https://joyceemiguel.wixstudio.com/houseway2/members-area/my/my-account">Registre-se aqui</a></p>
             </form>            
         </div>
     </div>
