--- a/templates/login.html
+++ b/templates/login.html
@@ -156,7 +156,7 @@
             {% endif %}
             <form method="POST" action="/login">
                 <input type="email" name="email" placeholder="E-mail" required>
-                <button type="submit">Avasnçar</button>
+                <button type="submit">Continuar</button>
                 <p class="helper-text">Não tem uma conta? <a href="https://joyceemiguel.wixstudio.com/houseway2/members-area/my/my-account">Registre-se aqui</a></p>
             </form>            
         </div>
