--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Virtual Tour</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf/notyf.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/pannellum.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intro.js/minified/introjs.min.css">
 
     <script src="https://cdn.jsdelivr.net/npm/notyf/notyf.min.js"></script>
